--- a/css/sample_ma_ru_ferries.css
+++ b/css/sample_ma_ru_ferries.css
@@ -49,6 +49,7 @@ h2::before {
 .flex,
 .flex_list {
   display: flex;
+  flex-wrap: wrap;
 }
 
 /* --#header----------------------- */
@@ -71,7 +72,7 @@ header li {
 /* --#mainvisual------------------- */
 #mainvisual img {
   width: 100%;
-  height: 1000px;
+  height: 100vh;
   object-fit: cover;
   object-position: 0 70%;
 }
@@ -161,7 +162,6 @@ footer {
     text-align: center;
   }
 
-
   h1 {
     font-size: 2rem;
   }
@@ -217,10 +217,6 @@ footer {
   .container {
     margin-left: 20px;
     padding: 0;
-  }
-
-  #mainvisual img {
-    height: 100vh;
   }
 
   .time_table {
