--- a/css/sample_ma_ru_ferries.css
+++ b/css/sample_ma_ru_ferries.css
@@ -57,6 +57,7 @@ header {
   width: 1500px;
   margin: 0 auto;
   padding: 30px 0;
+  z-index: 100;
 }
 
 header .flex {
@@ -69,12 +70,16 @@ header li {
   font-size: 1.25rem;
 }
 
-/* --#mainvisual------------------- */
+#mainvisual {
+  overflow: hidden;
+}
+
 #mainvisual img {
   width: 100%;
   height: 100vh;
   object-fit: cover;
-  object-position: 0 70%;
+  object-position: 50% 80%;
+  background-repeat: no-repeat;
 }
 
 /* --.container------------------- */
